Fixed todo ID stucks at 1

--- a/src/Components/pages/Users.css
+++ b/src/Components/pages/Users.css
@@ -63,10 +63,6 @@ input {
   transition: 75ms ease-out;
 }
 
-.todo:active {
-  transform: scale(.99);
-}
-
 /* The abomination of styling */
 
 #titleInput:focus,
